service: more fixes
